# SceneMap

./: .gitignore  .gitmodules  Dockerfile  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release.yml
LICENSES/: README.md
examples/: run-server-cli.ps1  run-server-instantsfm.ps1  run-server-native.ps1  run-server-pycolmap.ps1  run-server-realityscan.ps1  run-server-spheresfm.ps1
scripts/: build-colmap.ps1  build-colmap.sh  build-nuitka-standalone.ps1  build-nuitka-standalone.sh  build-pycolmap.ps1  build-pycolmap.sh
src/sceneapi_map/: __init__.py
src/sceneapi_map/colmap/: __init__.py  api_launcher.py  info.py  io_mapper.py  model.py  provisioning.py  pycolmap_backend.py
src/sceneapi_map/colmap/cli/: __init__.py  backend.py  plugin.py  server.py
src/sceneapi_map/colmap/native/: __init__.py  backend.py  cpp_inmemory_backend.py  cpp_native_backend.py  plugin.py  server.py
src/sceneapi_map/colmap/pycolmap/: __init__.py  backend.py  plugin.py  server.py
src/sceneapi_map/instantsfm/: __init__.py  api_launcher.py  backend.py  cli.py  container_service.py  plugin.py  provisioning.py  server.py
src/sceneapi_map/instantsfm/_sksparse_shim/sksparse/: __init__.py  cholmod.py
src/sceneapi_map/mapanything/: __init__.py  backend.py  plugin.py  provisioning.py
src/sceneapi_map/realityscan/: api_launcher.py  backend.py  cli.py  plugin.py  provisioning.py  server.py
src/sceneapi_map/spheresfm/: api_launcher.py  backend.py  cli.py  plugin.py  provisioning.py  server.py
src/scenemap/: __init__.py
src/scenemap/colmap/: __init__.py  api_launcher.py  info.py  io_mapper.py  provisioning.py  stage_configs.py
src/scenemap/colmap/cli/: backend.py  plugin.py  server.py
src/scenemap/colmap/native/: __init__.py  backend.py  cpp_inmemory_backend.py  cpp_native_backend.py  plugin.py  server.py
src/scenemap/colmap/pycolmap/: __init__.py  backend.py  plugin.py  server.py
src/scenemap/instantsfm/: api_launcher.py  backend.py  container_service.py  plugin.py  provisioning.py  server.py
src/scenemap/mapanything/: __init__.py  backend.py  plugin.py
src/scenemap/realityscan/: __init__.py  api_launcher.py  backend.py  plugin.py  server.py
src/scenemap/spheresfm/: __init__.py  api_launcher.py  backend.py  plugin.py  provisioning.py  server.py
tests/: test_import.py  test_public_boundary.py
tests/colmap/: conftest.py  test_api_launcher.py  test_backend_discovery_contract.py  test_cli_plugin_contract.py  test_colmap_option_contract.py  test_io_mapper.py  test_model_parser.py  test_native_contract.py  test_native_cpp_inmemory_backend.py  test_native_cpp_native_backend.py  test_native_features.py  test_native_plugin.py  test_nuitka_packaging.py  test_provisioning.py  test_pycolmap_backend.py  test_pycolmap_contract.py  test_pycolmap_features.py  test_pycolmap_plugin.py  test_real_colmap_sample_data.py  test_sfmapi_http_discovery.py  test_sfmapi_http_e2e.py  test_stage_configs.py  test_submodule_contract.py
tests/instantsfm/: test_api_launcher.py  test_backend_actions.py  test_container_service.py  test_instantsfm_upstream_patches.py  test_plugin.py  test_provisioning.py  test_sfmapi_http_discovery.py  test_sksparse_compat.py
tests/mapanything/: test_backend.py  test_plugin.py
tests/realityscan/: test_api_launcher.py  test_backend_actions.py  test_plugin.py  test_sfmapi_actions.py  test_sfmapi_http_discovery.py
tests/spheresfm/: test_api_launcher.py  test_backend_actions.py  test_plugin.py  test_provisioning.py  test_sfmapi_http_discovery.py
