[project]
name = "scenemap"
version = "0.3.0"
description = "Unified sceneapi SfM mapping backend plugins: COLMAP (colmap_native, pycolmap, colmap_cli), InstantSfM, SphereSfM, RealityScan, and MapAnything (feed-forward) providers in one package"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.12,<3.13"
dependencies = [
    "sceneapi>=0.1.0,<0.2",
    # The COLMAP ColmapMapper conformer implements sceneio's neutral
    # mapping procedure contract (Mapper/MappingResult) + reuses its
    # colmap_db pair-id encoding for the graph->database translation.
    "sceneio>=0.2,<0.3",
    # InstantSfM's plugin-private sksparse.cholmod shim is SciPy-backed; it
    # was a hard dependency of sfmapi-instantsfm and keeps that layout here.
    "scipy>=1.13,<2",
]

[project.optional-dependencies]
server = []
pycolmap = [
    "pycolmap>=4.0.4",
]
pycolmap-cuda12 = [
    "pycolmap-cuda12>=4.0.4; platform_system == 'Linux'",
]
# MapAnything feed-forward engine deps — HEAVY, deferred to provisioning and
# NOT installed in CI (CI uses --extra dev). The `mapanything` model package
# is git-only (not on PyPI) and is installed by
# `scenemap.mapanything.provisioning` together with a CUDA Torch build and
# the model weights; only the PyPI-resolvable runtime deps are pinned here.
mapanything = [
    "torch>=2.4",
    "torchvision>=0.19",
    "pillow>=10",
]
dev = [
    "pytest>=8.3",
    "ruff>=0.8",
]
mcp = [
    "fastmcp==3.2.4",
]
standalone = [
    "nuitka>=2.6",
    "zstandard>=0.23",
    "fastmcp==3.2.4",
]
test = [
    "pytest>=8.3",
    "ruff>=0.8",
    "httpx>=0.28",
]

[project.scripts]
# Console-script names are unchanged from the four superseded repos.
sfmapi-colmap-api = "scenemap.colmap.api_launcher:main_native"
sfmapi-colmap-info = "scenemap.colmap.info:main_native"
sfmapi-pycolmap-api = "scenemap.colmap.api_launcher:main_pycolmap"
sfmapi-pycolmap-info = "scenemap.colmap.info:main_pycolmap"
sfmapi-colmap-cli-api = "scenemap.colmap.api_launcher:main_cli"
sfmapi-colmap-cli-info = "scenemap.colmap.info:main_cli"
sfmapi-instantsfm-api = "scenemap.instantsfm.api_launcher:main"
sfmapi-instantsfm-info = "scenemap.instantsfm.cli:main"
sfmapi-instantsfm-service = "scenemap.instantsfm.container_service:main"
sfmapi-spheresfm-api = "scenemap.spheresfm.api_launcher:main"
sfmapi-spheresfm-info = "scenemap.spheresfm.cli:main"
sfmapi-realityscan-api = "scenemap.realityscan.api_launcher:main"
sfmapi-realityscan-info = "scenemap.realityscan.cli:main"

[project.entry-points."sceneapi.backends"]
# Entry-point names are unchanged; only the values moved into scenemap.
colmap_native = "scenemap.colmap.native.plugin:plugin"
pycolmap = "scenemap.colmap.pycolmap.plugin:plugin"
colmap_cli = "scenemap.colmap.cli.plugin:plugin"
instantsfm = "scenemap.instantsfm.plugin:plugin"
spheresfm = "scenemap.spheresfm.plugin:plugin"
realityscan_cli = "scenemap.realityscan.plugin:plugin"
mapanything = "scenemap.mapanything.plugin:plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# The SciPy-backed sksparse.cholmod shim ships INSIDE the package
# (scenemap/instantsfm/_sksparse_shim/) and is PYTHONPATH-injected into
# InstantSfM worker subprocesses; never package it as a top-level
# ``sksparse`` distribution or it will shadow real scikit-sparse installs.
packages = ["src/scenemap"]

[tool.uv.sources]
sceneapi = { path = "../sfmapi", editable = true }
sceneio = { path = "../SceneIO", editable = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "e2e: end-to-end sceneapi workflow tests",
    "integration: tests that exercise external tools or package boundaries",
    "needs_colmap: requires a COLMAP executable",
    "needs_pycolmap: requires PyCOLMAP bindings",
    "needs_mapanything: requires the MapAnything engine (torch + mapanything + weights)",
    "needs_sample_data: requires official COLMAP sample images",
    "gpu: requires CUDA-capable PyCOLMAP/COLMAP dependencies",
    "slow: slow tests that may download data or run native SfM work",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "PT", "RUF"]
ignore = ["E501"]
